--- a/package.json
+++ b/package.json
@@ -14,23 +14,22 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
-    "@types/three": "^0.181.0",
-    "gsap": "^3.13.0",
-    "lenis": "^1.3.14",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "three": "^0.181.0"
-  },
-  "devDependencies": {
     "@tailwindcss/vite": "4.1.16",
     "@types/node": "22.19.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@types/three": "^0.181.0",
     "@vitejs/plugin-react": "^4.7.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.14",
     "lucide-react": "^0.552.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwindcss": "4.1.16",
+    "three": "^0.181.0",
     "typescript": "5.9.3",
     "vite": "^6.4.1"
-  }
+  },
+  "devDependencies": {}
 }
